[package]
name = "cname-blocker-voip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ctrlc = "3"
dotenvy = "0.15"
hound = "3"
ogg-opus = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
xphone = "0.6"

[dev-dependencies]
crossbeam-channel = "0.5"
fakepbx = "0.2"
serde_json = "1"
